--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ LICENSE file in the root directory of this source tree.
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId: 'APP_ID',
+          appId: '521760341361991',
           xfbml: true,
           version: 'v2.6'
         });
@@ -36,8 +36,8 @@ LICENSE file in the root directory of this source tree.
       <p>The "Send to Messenger" plugin will trigger an authentication callback to your webhook.</p>
 
       <div class="fb-send-to-messenger"
-        messenger_app_id='APP_ID'
-        page_id='PAGE_ID'
+        messenger_521760341361991='521760341361991'
+        page_id='eric.lui.places'
         data-ref="PASS_THROUGH_PARAM"
         color="blue"
         size="standard">
@@ -48,8 +48,8 @@ LICENSE file in the root directory of this source tree.
       <p>The "Message Us" plugin takes the user directly to Messenger and into a thread with your Page.</p>
 
       <div class="fb-messengermessageus"
-        messenger_app_id='APP_ID'
-        page_id='PAGE_ID'
+        messenger_521760341361991='521760341361991'
+        page_id='eric.lui.places'
         color="blue"
         size="standard">
       </div>
