--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@ LICENSE file in the root directory of this source tree.
       <p>The "Send to Messenger" plugin will trigger an authentication callback to your webhook.</p>
 
       <div class="fb-send-to-messenger"
-        messenger_521760341361991='521760341361991'
-        page_id='eric.lui.places'
+        app_id='521760341361991'
+        page_id='162851724130925'
         data-ref="PASS_THROUGH_PARAM"
         color="blue"
         size="standard">
@@ -48,8 +48,8 @@ LICENSE file in the root directory of this source tree.
       <p>The "Message Us" plugin takes the user directly to Messenger and into a thread with your Page.</p>
 
       <div class="fb-messengermessageus"
-        messenger_521760341361991='521760341361991'
-        page_id='eric.lui.places'
+        app_id='521760341361991'
+        page_id='162851724130925'
         color="blue"
         size="standard">
       </div>
